--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,13 +37,8 @@ jobs:
           app-dir: server
       - run:
           name: Run Backend Tests
-          command: |
-            cd server
-            npm run test 2>&1 | tee test-output.txt
+          command: cd server && npm run test
           no_output_timeout: 5m
-      - store_artifacts:
-          path: server/test-output.txt
-          destination: backend-test-results.txt
 
   test-frontend:
     docker:
@@ -56,13 +51,8 @@ jobs:
           app-dir: client
       - run:
           name: Run Frontend Tests
-          command: |
-            cd client
-            npm run test 2>&1 | tee test-output.txt
+          command: cd client && npm run test
           no_output_timeout: 5m
-      - store_artifacts:
-          path: client/test-output.txt
-          destination: frontend-test-results.txt
 
   build:
     docker:
@@ -79,9 +69,6 @@ jobs:
             cd client
             npm run build
             tar -czf build.tar.gz build/
-            # Generate build size report
-            echo "Client Build Size:" > build-stats.txt
-            du -sh build >> build-stats.txt
       - install-and-cache:
           app-dir: server
       - run:
@@ -91,14 +78,6 @@ jobs:
             npm run build
             npx tsc migrations/*.ts --outDir dist/migrations
             tar -czf dist.tar.gz dist/ package*.json
-            # Add server build size to report
-            echo "\nServer Build Size:" >> ../client/build-stats.txt
-            du -sh dist >> ../client/build-stats.txt
-      # Store build sizes for tracking
-      - store_artifacts:
-          path: client/build-stats.txt
-          destination: build-stats.txt
-      # Persist files needed for deployment
       - persist_to_workspace:
           root: .
           paths:
@@ -118,9 +97,6 @@ jobs:
       - run:
           name: Deploy to Server
           command: |
-            # Log deployment start
-            echo "Deployment started at $(date)" > deploy-log.txt
-            
             # Decompress builds
             cd /home/circleci/project/client && tar -xzf build.tar.gz
             cd /home/circleci/project/server && tar -xzf dist.tar.gz
@@ -137,38 +113,38 @@ jobs:
               npm ci --production && \
               NODE_ENV=production npm run migrate && \
               pm2 restart $SERVER_DIR/server/ecosystem.config.js && \
-              sudo systemctl restart nginx" 2>&1 | tee -a deploy-log.txt
+              sudo systemctl restart nginx"
       - run:
           name: Verify Deployment
           command: |
-            {
-              for i in {1..12}; do
-                response=$(curl -s -w "\n%{http_code}" https://taskmaster.mrspinn.ca/api/health)
-                body=$(echo "$response" | head -n 1)
-                status=$(echo "$response" | tail -n 1)
-                
-                if [[ "$status" == "200" && "$body" == "ok" ]]; then
-                  echo "✓ Deployment verified successfully - API and database are healthy"
-                  echo "Deployment completed successfully at $(date)" >> deploy-log.txt
-                  exit 0
-                fi
-                
-                if [ $i -lt 12 ]; then
-                  echo "Attempt $i: Service not ready, waiting 10 seconds..."
-                  sleep 10
-                fi
-              done
+            check_health() {
+              response=$(curl -s -w "\n%{http_code}" https://taskmaster.mrspinn.ca/api/health)
+              body=$(echo "$response" | head -n 1)
+              status=$(echo "$response" | tail -n 1)
               
-              echo "✗ Deployment verification failed after 2 minutes"
-              echo "Fetching recent logs for debugging:"
-              ssh $SERVER_USER@$SERVER_IP "cd $SERVER_DIR/server && pm2 logs --lines 50 --nostream"
-              echo "Deployment failed at $(date)" >> deploy-log.txt
-              exit 1
-            } 2>&1 | tee -a deploy-log.txt
-      # Store deployment results
-      - store_artifacts:
-          path: deploy-log.txt
-          destination: deploy-log.txt
+              if [[ "$status" == "200" && "$body" == "ok" ]]; then
+                return 0
+              else
+                return 1
+              fi
+            }
+            
+            for i in {1..12}; do
+              if check_health; then
+                echo "✓ Deployment verified successfully - API and database are healthy"
+                exit 0
+              fi
+              
+              if [ $i -lt 12 ]; then
+                echo "Attempt $i: Service not ready, waiting 10 seconds..."
+                sleep 10
+              fi
+            done
+            
+            echo "✗ Deployment verification failed after 2 minutes"
+            echo "Fetching recent logs for debugging:"
+            ssh $SERVER_USER@$SERVER_IP "cd $SERVER_DIR/server && pm2 logs --lines 50 --nostream"
+            exit 1
 
 workflows:
   test-build-and-deploy:
